Prevent overflow of long breadcrumbs in navbar

--- a/src/stylesheets/_navbar.scss
+++ b/src/stylesheets/_navbar.scss
@@ -3,6 +3,9 @@ $breadcrumb-separator-gap: 8px;
 $avatar-size: 40px;
 
 .mu-navbar {
+  > div .mu-navbar-breadcrumb-container {
+    min-width: 0;
+  }
 
   .mu-navbar-breadcrumb {
 
